# diffusion_dynamics

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_container.sh
diffusion_dynamics/: utils.py
diffusion_dynamics/experiments/pendulum1/: data_collection.py  inference.py  train_model.py
diffusion_dynamics/experiments/pendulum2/: data_collection.py  inference.py  train_model.py
diffusion_dynamics/models/: ddpm_1d.py  helpers.py  utils.py
diffusion_dynamics/models/tests/: inference_ddpm_1d.py  train_ddpm_1d.py
diffusion_dynamics/simulation/: animation.py  simulator.py  systems.py
src/: ddpm.py  ddpm2.py  ddpm3.py  ddpm4.py  ddpm5.py  hmm.py  mpl_test.py  test.ipynb
